--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ streaming-iterator = "0.1.8"
 scylla = "0.4"
 tokio-stream = "0.1.11"
 futures = "0.3.25"
+axum = "0.6.17"
 [dependencies.uuid]
 version = "1.2.2"
 features = [
